--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,20 @@
 
     <groupId>net.nighthawkempires</groupId>
     <artifactId>permissions</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.9-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>net.nighthawkempires</groupId>
             <artifactId>core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.1.3-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.destroystokyo.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.16.3-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
