--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Permissions
-version: 1.0.0-SNAPSHOT
+version: ${version}
 main: net.nighthawkempires.permissions.PermissionsPlugin
 description: Nighthawk Empires' Permissions Plugin.
 author: NoneVale_
